--- a/Home/package.json
+++ b/Home/package.json
@@ -9,8 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.5",
+    "@fortawesome/fontawesome-free-brands": "^5.0.10",
+    "@fortawesome/fontawesome-free-regular": "^5.0.10",
+    "@fortawesome/fontawesome-free-solid": "^5.0.10",
     "bootstrap": "^4.1.0",
     "jquery": "^3.3.1",
+    "npm": "^5.8.0",
     "popper.js": "^1.14.3"
   }
 }
